Project MediView_MVP {
  database_type: 'PostgreSQL'
  Note: '''
Medical imaging + diagnosis, simplified build (plan revision mvp-v3-simple).

The Study status (todo -> in_progress -> re_diagnosis -> done) is the single source of truth.
A patient books inside a doctor's schedule; an admin imports DICOM files; a doctor reads the
study under a Redis single-writer lock and finalizes a report with medications.

4 services, one database and schema each, 9 tables. No foreign key crosses a schema; services
call each other over HTTP. The study lock lives only in Redis, so it has no table.
'''
}

Enum user_role {
  patient [note: 'self-registers']
  doctor  [note: 'created by an admin']
  admin   [note: 'seeded']
}

Enum study_status {
  todo         [note: 'booked; images may be imported, not yet read']
  in_progress  [note: 'a doctor holds the lock and is reading']
  re_diagnosis [note: 'another read requested']
  done         [note: 'finalized; no further read']
}

Enum study_priority {
  routine
  urgent
  stat
}

Enum report_status {
  draft
  finalized
}

Enum report_decision {
  done
  re_diagnosis
}

Table identity.users {
  id            uuid         [pk]
  email         varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  full_name     varchar(255) [not null]
  role          user_role    [not null, note: 'one role per user; three policies read it from the JWT']
  created_at    timestamptz  [not null, default: `now()`]
}

Table identity.patients {
  id         uuid        [pk]
  user_id    uuid        [not null, unique]
  mrn        varchar(20) [not null, unique, note: 'MRN-{nextval} from a Postgres sequence']
  created_at timestamptz [not null, default: `now()`]
}
Ref: identity.patients.user_id - identity.users.id [delete: cascade]

Table identity.doctors {
  id             uuid         [pk]
  user_id        uuid         [not null, unique]
  license_number varchar(50)  [not null, unique]
  specialty      varchar(255)
  created_at     timestamptz  [not null, default: `now()`]
}
Ref: identity.doctors.user_id - identity.users.id [delete: cascade]

Table identity.doctor_schedules {
  id           uuid     [pk]
  doctor_id    uuid     [not null]
  day_of_week  smallint [not null, note: '0 = Sunday .. 6 = Saturday']
  start_time   time     [not null]
  end_time     time     [not null]
  slot_minutes int      [not null, default: 30]

  indexes { (doctor_id, day_of_week) [unique] }
}
Ref: identity.doctor_schedules.doctor_id > identity.doctors.id [delete: cascade]

Table studies.studies {
  id                 uuid           [pk]
  study_number       varchar(20)    [not null, unique, note: 'STU-{nextval}']
  patient_id         uuid           [not null, note: 'logical -> identity.patients.id']
  patient_mrn        varchar(20)    [not null, note: 'snapshot at booking']
  patient_name       varchar(255)   [not null, note: 'snapshot at booking']
  doctor_id          uuid           [not null, note: 'logical -> identity.doctors.id']
  doctor_name        varchar(255)   [not null, note: 'snapshot at booking']
  scheduled_start    timestamptz    [not null]
  priority           study_priority [not null, default: 'routine']
  status             study_status   [not null, default: 'todo']
  images_imported_at timestamptz    [note: 'guard: a read cannot start before this is set']
  created_at         timestamptz    [not null, default: `now()`]
  xmin               xid            [note: 'Postgres system column, the optimistic concurrency token']

  indexes {
    (doctor_id, scheduled_start) [unique, note: 'no double booking']
    (doctor_id, status, priority)
    patient_id
  }
  Note: 'The aggregate root. Booking fields live here; there is no appointments table.'
}

Table studies.study_status_history {
  id          uuid         [pk]
  study_id    uuid         [not null]
  from_status study_status
  to_status   study_status [not null]
  changed_by  uuid         [not null, note: 'logical -> identity.users.id']
  reason      text         [note: 'required for an admin override or force release']
  changed_at  timestamptz  [not null, default: `now()`]

  indexes { (study_id, changed_at) }
  Note: 'Owned by Study, appended only inside a transition. It is also the audit trail.'
}
Ref: studies.study_status_history.study_id > studies.studies.id [delete: cascade]

Table imaging.instances {
  id                  uuid        [pk]
  study_id            uuid        [not null, note: 'logical -> studies.studies.id']
  series_instance_uid varchar(64) [not null, note: 'DICOM (0020,000E)']
  sop_instance_uid    varchar(64) [not null, unique, note: 'DICOM (0008,0018)']
  instance_number     int
  storage_path        text        [not null, note: 'relative path under the local blob root']
  size_bytes          bigint      [not null]
  created_at          timestamptz [not null, default: `now()`]

  indexes { (study_id, series_instance_uid, instance_number) }
}

Table reporting.reports {
  id           uuid            [pk]
  study_id     uuid            [not null, note: 'logical -> studies.studies.id; not unique, a re-diagnosis adds a report']
  doctor_id    uuid            [not null, note: 'logical -> identity.doctors.id']
  doctor_name  varchar(255)    [not null, note: 'snapshot']
  status       report_status   [not null, default: 'draft']
  findings     text
  impression   text
  decision     report_decision [note: 'set on finalize']
  finalized_at timestamptz
  created_at   timestamptz     [not null, default: `now()`]
  xmin         xid

  indexes { study_id }
  Note: 'Aggregate root. A finalized report is immutable.'
}

Table reporting.report_medications {
  id        uuid         [pk]
  report_id uuid         [not null]
  drug_name varchar(255) [not null, note: 'free text; no formulary']
  dosage    varchar(100)
  frequency varchar(100)
  duration  varchar(100)

  indexes { report_id }
}
Ref: reporting.report_medications.report_id > reporting.reports.id [delete: cascade]

TableGroup Identity_Service {
  identity.users
  identity.patients
  identity.doctors
  identity.doctor_schedules
}

TableGroup Studies_Service {
  studies.studies
  studies.study_status_history
}

TableGroup Imaging_Service {
  imaging.instances
}

TableGroup Reporting_Service {
  reporting.reports
  reporting.report_medications
}
